--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
 
     "types": ["vite/client"]
   },
-  "include": ["src", "./src/vite-env.d.ts"],
+  "include": ["src", "vite-env.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
